# comfyui-civitai-alchemist

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  civitai_routes.py  pyproject.toml
civitai_utils/: civitai_api.py
docs/research/2026-02-01-civitai-api-resource-resolution/: README.md  api-comparison.md  investigate_apis.py  investigation.json  investigation.md
docs/specs/2026-01-31-sidebar-extension-phase1-2/: implementation.md
docs/specs/2026-01-31-sidebar-extension-phase3-5/: acceptance.feature  implementation.md  prd.md
js/: main.js
nodes/: example_node.py
pipeline/: download_models.py  fetch_metadata.py  generate_workflow.py  reproduce.py  resolve_models.py
scripts/: benchmark.sh  check_env.sh  link.sh  run_comfyui.sh  setup.sh  unlink.sh
ui/src/: App.vue
ui/src/components/: ModelCard.vue  ModelList.vue
ui/src/composables/: useCivitaiApi.ts
ui/src/types/: comfyui.d.ts  index.ts
utils/: civitai_api.py  model_manager.py
